syntax = "proto2";

package playapi.proto.finsky.download;

import "play_common.proto";

message Install {
    optional fixed64 androidId = 1;
    optional int32 version = 2;
    optional bool bundled = 3;
    optional bool pending = 4;
    optional int64 lastUpdateTimestampMillis = 5;
}

message Dependency {
    optional string packageName = 1;
    optional int32 minVersionCode = 2;
    optional int32 versionCodeMask = 3;
    optional bool skipPermissions = 4;
}
message InstallDetails {
    optional int32 installLocation = 1;
    optional int64 size = 2;
    repeated Dependency dependency = 3;
    optional int32 targetSdkVersion = 4;
}

message PatchDetails {
    optional int32 baseVersionCode = 1;
    optional int64 size = 2;
}
message FileMetadata {
    optional int32 fileType = 1;
    optional int32 versionCode = 2;
    optional int64 size = 3;
    optional string splitId = 4;
    optional int64 compressedSize = 5;
    repeated PatchDetails patchDetails = 6;
}

message AndroidAppPatchData {
    optional int32 baseVersionCode = 1;
    optional string baseSignature = 2;
    optional string downloadUrl = 3;
    optional int32 patchFormat = 4;
    optional int64 maxPatchSize = 5;
}
message AppFileMetadata {
    optional int32 fileType = 1;
    optional int32 versionCode = 2;
    optional int64 size = 3;
    optional string downloadUrl = 4;
    optional AndroidAppPatchData patchData = 5;
    optional int64 compressedSize = 6;
    optional string compressedDownloadUrl = 7;
    optional string signature = 8;
}
message EncryptionParams {
    optional int32 version = 1;
    optional string encryptionKey = 2;
    optional string hmacKey = 3;
}
message SplitDeliveryData {
    optional string id = 1;
    optional int64 downloadSize = 2;
    optional int64 gzippedDownloadSize = 3;
    optional string signature = 4;
    optional string downloadUrl = 5;
    optional string gzippedDownloadUrl = 6;
    optional AndroidAppPatchData patchData = 7;
}
message AndroidAppDeliveryData {
    optional int64 downloadSize = 1;
    optional string signature = 2;
    optional string downloadUrl = 3;
    repeated AppFileMetadata additionalFile = 4;
    repeated HttpCookie downloadAuthCookie = 5;
    optional bool forwardLocked = 6;
    optional int64 refundTimeout = 7;
    optional bool serverInitiated = 8;
    optional int64 postInstallRefundWindowMillis = 9;
    optional bool immediateStartNeeded = 10;
    optional AndroidAppPatchData patchData = 11;
    optional EncryptionParams encryptionParams = 12;
    optional string gzippedDownloadUrl = 13;
    optional int64 gzippedDownloadSize = 14;
    repeated SplitDeliveryData splitDeliveryData = 15;
    optional int32 installLocation = 16;
    optional bool everExternallyHosted = 17;
}
message DeliveryResponse {
    optional int32 status = 1;
    optional AndroidAppDeliveryData appDeliveryData = 2;
}